Start to add support for X-One As a result, change min version to 14393(Anniversary); Add localization to excluded languages controls.

--- a/ApplicationDataManager/Settings/Xaml/DefaultTemplateProvider.xaml
+++ b/ApplicationDataManager/Settings/Xaml/DefaultTemplateProvider.xaml
@@ -24,8 +24,8 @@
                        FontWeight="{ThemeResource SliderHeaderThemeFontWeight}"
                        TextWrapping="WrapWholeWords" />
             <local:SettingSlider Grid.Row="1"
-                                 SettingValue="{x:Bind}">
-            </local:SettingSlider>
+                                 SettingValue="{x:Bind}"
+                                 IsFocusEngagementEnabled="False" />
         </Grid>
     </DataTemplate>
     <DataTemplate x:Name="Enum"
