--- a/ExViewer/Controls/ExcludedLanguagesSelector.xaml
+++ b/ExViewer/Controls/ExcludedLanguagesSelector.xaml
@@ -56,16 +56,20 @@
             <RowDefinition Height="9*" />
         </Grid.RowDefinitions>
         <TextBlock Style="{StaticResource TopHeaderTextBlockStyle}"
+                   x:Uid="ExcludedLanguagesSelectorOriginalTextBlock"
                    Text="Original"
                    Grid.Column="1" />
         <TextBlock Style="{StaticResource TopHeaderTextBlockStyle}"
                    Text="Translated"
+                   x:Uid="ExcludedLanguagesSelectorTranslatedTextBlock"
                    Grid.Column="2" />
         <TextBlock Style="{StaticResource TopHeaderTextBlockStyle}"
                    Text="Rewrite"
+                   x:Uid="ExcludedLanguagesSelectorRewriteTextBlock"
                    Grid.Column="3" />
         <TextBlock Style="{StaticResource TopHeaderTextBlockStyle}"
                    Text="All"
+                   x:Uid="ExcludedLanguagesSelectorAllTextBlock"
                    Grid.Column="4" />
         <ListView x:Name="lv_LeftHeader"
                   Style="{StaticResource StackPanelListViewStyle}"
