--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -9,6 +9,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d"
       SizeChanged="page_SizeChanged"
+      KeyUp="page_KeyUp"
       NavigationCacheMode="Enabled"
       x:Name="page">
     <Page.Transitions>
@@ -674,6 +675,7 @@
             </StackPanel>
         </ScrollViewer>
         <CommandBar x:Name="cb_top"
+                    IsDynamicOverflowEnabled="False"
                     HorizontalContentAlignment="Stretch">
             <CommandBar.Content>
                 <Grid>
