--- a/ExViewer/Views/EhWikiDialog.xaml
+++ b/ExViewer/Views/EhWikiDialog.xaml
@@ -8,6 +8,7 @@
                mc:Ignorable="d"
                Title="TITLE"
                PrimaryButtonText="Ok"
+               RequiresPointer="WhenFocused"
                FullSizeDesired="True">
 
     <Grid>
