--- a/ExViewer/Strings/Strings.tt
+++ b/ExViewer/Strings/Strings.tt
@@ -9,7 +9,7 @@
 <#@ import namespace="System.IO" #>
 <#@ import namespace="System.Xml" #>
 <#@ import namespace="System.Web" #>
-<#@ output extension=".cs" #>
+<#@ output extension=".tt.cs" #>
 <#
     // TODO: 修改相关配置。
     // 检索 resw 的路径。
